--- a/src/style.sass
+++ b/src/style.sass
@@ -72,7 +72,7 @@ body
 .main-page
   padding-bottom: 50px
   background-color: $mainBGColor
-  border-radius: 0 0 5px 5px
+  border-radius: 5px
 
   &__content
     padding: 50px 
@@ -175,7 +175,7 @@ body
 .create-idea-page
   padding-bottom: 50px
   background-color: $mainBGColor
-  border-radius: 0 0 5px 5px
+  border-radius: 5px
 
   &__content
     padding: 30px 60px 
@@ -243,7 +243,7 @@ body
   position: relative
   padding-bottom: 50px
   background-color: $mainBGColor
-  border-radius: 0 0 5px 5px
+  border-radius: 5px
 
   &__content
     padding: 30px 60px 
